--- a/second/index.html
+++ b/second/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Joe's Website</title>
 	<link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-	<header></header>
-	
-	<div class="container">
+	<div class="left">
 	</div>
-	
-	<footer></footer>
-		
-	
+	<div class="center">
+	</div>
+	<div class="right">
+	  <div class="image-place-holder">Image Placeholder
+	  </div>
+	</div>
+
+
 	<script src="js/main.js"></script>
 </body>
+
 </html>
