--- a/first/index.html
+++ b/first/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+   
 	<header></header>
 	
-	<div class="container">
-	</div>
+	<main>
+	</main>
 	
 	<footer></footer>
-		
 	
 	<script src="js/main.js"></script>
 </body>
